# Intel-Lint

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IntelLint.spec  README.md  SECURITY.md  Start Intel Lint.lnk  install-ipex-ollama.cmd  pyproject.toml  release-safety-check.cmd  start-dev.cmd
backend/: pytest.ini  requirements.txt
backend/app/: _compat.py  engine.py  engine_ollama.py  engine_placeholder.py  main.py
backend/scripts/: variance_check.py
backend/tests/: conftest.py  test_bias_sentence_pipeline.py  test_cli_smoke.py  test_golden.py  test_ollama_engine_resilience.py  test_ollama_smoke.py
docs/: decisions.md  overview.md  release-safety.md
examples/: README.md
examples/sample_data/: manifest.jsonl
examples/scenario_bias/: input.txt
examples/scenario_minimal/: input.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  SetupPage.jsx  config.js  index.css
golden/sample1/: annotated.md  claims.json  rewrite.md
golden/sample2/: annotated.md  claims.json  rewrite.md
golden/sample3/: annotated.md  claims.json  rewrite.md
legacy/: start-ollama-gpu.cmd
llm_models/: README.md
samples/: sample1.txt  sample2.txt  sample3.txt
scripts/: build_release.py  clean_release.py  doctor.py  release_check.py  run.py  setup_local_llm.py
src/intel_lint/: __init__.py  api.py  api_setup.py  frontend_assets.py  packaged_app.py
src/intel_lint/cli/: main.py
src/intel_lint/core/: __init__.py  engine.py  ollama.py  placeholder.py
src/intel_lint/io/: __init__.py  outputs.py
(+3 files in other folders)
